Fix white background when scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 html, body {
     overflow-x: hidden;
+    background-color:#202020;  
 }
 
 body {
